--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/burnoutberni/welcome-to-sweden#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "bootbot": "^1.0.8",
     "express": "^4.15.2",
     "request": "^2.81.0"
   }
